X-editable changelog
=============================


Version 1.2.0 wip
----------------------------  
[enh] 'select' submit by enter (vitalets)  
[bug #37] fix incorrectly shown datepicker in jquery 1.7.1 + webkit (vitalets)  
[enh] added url param 'jquery' to run tests in different versions of jquery, e.g. '&jquery=1.7.2' (vitalets)  
[enh] 'enablefocus' option removed. More efficient to use 'save/hide' events to set focus to any element (vitalets)  
[enh] 'init' event was added due to removal of render event (vitalets)  
[enh] 'render' event was removed, use 'display' callback instead (vitalets)  
[enh] 'checklist' submit value as array, not comma separated string (vitalets)  
[enh] 'checklist' was refactored: options 'viewseparator', 'limit', 'limitText' are supressed by 'display' callback (vitalets)  
[enh] new option: 'display' callback. Makes far more flexible rendering value into element's text. (vitalets)  
[bug] fix typos (atrophic) 
[enh] all callbacks scope changed to element (vitalets) 
[enh] new option: 'cancelnochange' to cancel or submit value when it was not changed in form (vitalets) 
[enh] composite pk can be defined as JSON in data-pk attribute (vitalets) 
[enh #30] new option 'sourceCache' true|false to disable cache for select (vitalets) 
[bug #34] inputclass span* broken with fluid bootstrap layout. Classes changed to 'input-*'. (vitalets) 
[enh] utils now added to $.fn.editableutils instead of $.fn.editableform.utils (vitalets)
[enh] input types now added to $.fn.editabletypes instead of $.fn.editableform.types (vitalets)
[enh] playground and tests now use requirejs (vitalets)  
[bug #27] 'today' button toggle bug in bootstrap-datepicker (vitalets)  


Version 1.1.1 Nov 30, 2012
----------------------------   
[enh] 'showbuttons' option to hide buttons in form (vitalets)  
[enh] object can be passed in 'option' method to set several options at once (vitalets)  
[enh #20] toggle editable by 'dblclick' and 'mouseenter' (vitalets)  